Prevent tag wrap

--- a/assets/src/App.css
+++ b/assets/src/App.css
@@ -61,6 +61,8 @@ button[disabled],input[type="submit"][disabled] {
   
 .react-tagsinput--focused {
     border: 2px solid black;
+    padding-left: 9px;
+    padding-right: 9px;
 }
   
 .react-tagsinput-tag {
